--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -166,6 +166,39 @@ a.nav:hover{
     color: #000;
 }
 
+.slider {
+    -webkit-appearance: none;
+    /*width: 100%;*/
+    border-radius: 5px;   
+    height: 7px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #4CAF50;
+    cursor: pointer;
+    border-radius: 50%
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
 #loading-bar .bar {
   position: relative;
 }
