--- a/app/views/map/leaflet-map.html
+++ b/app/views/map/leaflet-map.html
@@ -17,7 +17,7 @@
         height: 18px;
         float: left;
         margin-right: 8px;
-        opacity: 0.7;
+        /* opacity: 0.7; */
     }
 </style>
 <leaflet lf-center="map.center" lf-draw="map.drawOptions" markers-nested="true" markers="map.markers" layers="map.layers"
