fix hiển thị phần chú thích trên bản đồ

--- a/app/views/map/leaflet-map.html
+++ b/app/views/map/leaflet-map.html
@@ -11,6 +11,10 @@
         display: block;
     }
 
+    .legend .outline {
+        margin: 2px;
+    }
+
     .legend i {
         color: #777;
         width: 18px;
