--- a/app/asset/css/search.css
+++ b/app/asset/css/search.css
@@ -85,8 +85,8 @@
     }
 
     #sidebar {
-        min-width: 250px;
-        max-width: 250px;
+        min-width: 320px;
+        max-width: 320px;
         background: #f7f9fa;
         box-shadow: 4px 4px 10px rgba(0,0,0,0.2) !important;
         transition: all 0.3s;
@@ -109,26 +109,26 @@
         /*border-bottom: 1px solid #47748b;*/
     }
 
-    #sidebar ul p {
+    /* #sidebar ul p {
         color: #fff;
         padding: 10px;
-    }
+    } */
 
-    #sidebar ul li a {
+    /* #sidebar ul li a {
         padding: 5px;
         padding-left: 10px;
         font-size: 1.1em;
         display: block;
-    }
-    #sidebar ul li a:hover {
+    } */
+    /* #sidebar ul li a:hover {
         color: #7386D5;
         background: #fff;
-    }
+    } */
 
-    #sidebar ul li.active > a, a[aria-expanded="true"] {
+    /* #sidebar ul li.active > a, a[aria-expanded="true"] { */
         /*color: #fff;*/
         /*background: #6d7fcc;*/
-    }
+    /* } */
 
 
     a[data-toggle="collapse"] {
@@ -148,16 +148,16 @@
     }*/
 
 
-    ul ul a {
+    /* ul ul a {
         font-size: 0.9em !important;
         padding-left: 30px !important;
-    }
+    } */
 
     ul.CTAs {
         padding: 20px;
     }
 
-    ul.CTAs a {
+    /* ul.CTAs a {
         text-align: center;
         font-size: 0.9em !important;
         display: block;
@@ -168,12 +168,12 @@
     a.download {
         background: #fff;
         color: #7386D5;
-    }
+    } */
 
-    a.article, a.article:hover {
+    /* a.article, a.article:hover {
         background: #6d7fcc !important;
         color: #fff !important;
-    }
+    } */
 
 
 
