--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -38,7 +38,7 @@
                     <input type="text" placeholder="Tìm kiếm" name="" ng-model="searchContent.nguoiDinhTen" class="input-form-search">
                 </form>
             </div>
-           <!--  <div uib-accordion-group class="panel-default" heading="Nam">
+            <!--  <div uib-accordion-group class="panel-default" heading="Nam">
                 {{group.content}}
                 <form ng-submit="searchSample()" style="display: inline;">
                     <input type="range" min="1000" max="3000" value="2017" ng-model="searchContent.ngayDinhTen" class="slider" id="myRange" class="slider">
@@ -70,15 +70,15 @@
                     <input type="text" placeholder="Tìm kiếm" name="" ng-model="searchContent.diaDiemThuMau" class="input-form-search">
                 </form>
             </div>
-            <!-- <div uib-accordion-group class="panel-default" heading="Vị trí tọa độ">
+            <div uib-accordion-group is-open="openmap" class="panel-default" heading="Vị trí tọa độ">
                 {{group.content}}
-                <form ng-submit="searchSample()" ng-controller="LeafletMapController">
+                <form ng-submit="searchSample()">
                     <input type="text" placeholder="Tìm kiếm" name="" ng-model="searchContent.viTriToaDo" class="input-form-search">
-                    <leaflet lf-center="map.center" lf-draw="map.drawOptions" markers-nested="true" markers="map.markers" layers="map.layers"
-                        watch-options='watchOptions' legend="map.legend" height="200px" width="100%">
-                    </leaflet>
                 </form>
-            </div> -->
+                <leaflet ng-if="openmap" lf-center="map.center" lf-draw="map.drawOptions"  watch-options='watchOptions' height="200px"
+                    width="100%">
+                </leaflet>
+            </div>
             <div uib-accordion-group class="panel-default" heading="Phân bố Việt Nam">
                 {{group.content}}
                 <form ng-submit="searchSample()">
@@ -115,7 +115,8 @@
                 </div>
                 <div class="col-lg-10 col-md-10 col-xs-12 col-sm-10">
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%" id="download-progress-bar">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                            aria-valuemax="100" style="width:100%" id="download-progress-bar">
                             70%
                         </div>
                     </div>
@@ -132,7 +133,9 @@
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <center><h3>Kết quả tìm kiếm | {{searchResult}}</h3></center>
+                    <center>
+                        <h3>Kết quả tìm kiếm | {{searchResult}}</h3>
+                    </center>
                 </div>
             </div>
         </nav>
@@ -140,7 +143,7 @@
             <thead>
                 <tr>
                     <th colspan="3">
-                        Xem 
+                        Xem
                         <select ng-model="viewby" ng-change="setItemsPerPage(viewby)">
                             <option value="3">3</option>
                             <option value="5">5</option>
@@ -152,15 +155,22 @@
                         </select> mẫu.
                     </th>
                     <th colspan="4">
-                        <button class="btn btn-sm btn-success" style="cursor: pointer; float: right; border-radius: 0px;" ng-click="selectAll()"><span class="glyphicons glyphicons-ok"></span> Select all</button>
+                        <button class="btn btn-sm btn-success" style="cursor: pointer; float: right; border-radius: 0px;" ng-click="selectAll()">
+                            <span class="glyphicons glyphicons-ok"></span> Select all</button>
 
                         <div class="dropdown" style="float: right;">
-                            <button class="btn btn-sm btn-primary" style="border-radius: 0px;"><span class="glyphicon glyphicon-export"></span> Trích xuất <b class="caret"></b></button>
+                            <button class="btn btn-sm btn-primary" style="border-radius: 0px;">
+                                <span class="glyphicon glyphicon-export"></span> Trích xuất
+                                <b class="caret"></b>
+                            </button>
                             <!-- <input type="hidden" name="link" ng-bind="link" id="input" class="form-control" value=""> -->
                             <div class="dropdown-content">
-                                    <a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
-                                    <a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
-                                    <a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> Xuất zip</a>
+                                <a ng-click="export('pdf')">
+                                    <span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
+                                <a ng-click="export('docx')">
+                                    <span class="glyphicon glyphicon-download"></span> Xuất docx</a>
+                                <a ng-click="export('zip')">
+                                    <span class="glyphicon glyphicon-download"></span> Xuất zip</a>
                             </div>
                         </div>
                     </th>
@@ -178,7 +188,7 @@
                     </th>
                     <th ng-click="sort('quocGia')" style="cursor: pointer;">
                         Quốc gia
-                         <span ng-show="sortKey == 'quocGia' && !sortReverse" class="fa fa-caret-down"></span>
+                        <span ng-show="sortKey == 'quocGia' && !sortReverse" class="fa fa-caret-down"></span>
                         <span ng-show="sortKey == 'quocGia' && sortReverse" class="fa fa-caret-up"></span>
                     </th>
                     <th ng-click="sort('nguoiLapPhieuMauVat')" style="cursor: pointer;">
@@ -212,7 +222,7 @@
                     <td>
                         {{post.maDeTai}}
                     </td>
-                    
+
                     <td>
                         {{post.quocGia ? post.quocGia : 'Chưa có'}}
                     </td>
@@ -220,7 +230,7 @@
                         {{post.nguoiLapPhieuMauVat ? post.nguoiLapPhieuMauVat : 'Chưa có tên'}}
                     </td>
                     <td>
-                        <span>Người thu mẫu: </span>{{post.nguoiThuMau ? post.nguoiThuMau : 'Chưa có tên'}}       
+                        <span>Người thu mẫu: </span>{{post.nguoiThuMau ? post.nguoiThuMau : 'Chưa có tên'}}
                     </td>
                     <td>
                         {{post.created_at | date: "yyyy-MM-dd hh:mm:ss"}}
@@ -231,19 +241,16 @@
                 </tr>
             </tbody>
         </table>
-        <dir-pagination-controls
-            max-size="5"
-            direction-links="true"
-            boundary-links="true" >
+        <dir-pagination-controls max-size="5" direction-links="true" boundary-links="true">
         </dir-pagination-controls>
     </div>
 </div>
 <script src="/javascripts/FileSaver.js"></script>
 <script src="/javascripts/circle-progress/circle-progress.min.js"></script>
- <script type="text/javascript">
-     $(document).ready(function () {
-         $('#sidebarCollapse').on('click', function () {
-             $('#sidebar').toggleClass('active');
-         });
-     });
- </script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+        });
+    });
+</script>
