--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -72,9 +72,9 @@
             </div>
             <div uib-accordion-group is-open="openmap" class="panel-default" heading="Vị trí tọa độ">
                 {{group.content}}
-                <form ng-submit="searchSample()">
+                <!-- <form ng-submit="searchSample()">
                     <input type="text" placeholder="Tìm kiếm" name="" ng-model="searchContent.viTriToaDo" class="input-form-search">
-                </form>
+                </form> -->
                 <leaflet ng-if="openmap" lf-center="map.center" lf-draw="map.drawOptions"  watch-options='watchOptions' height="200px"
                     width="100%">
                 </leaflet>
