--- a/app/asset/css/search.css
+++ b/app/asset/css/search.css
@@ -1,203 +1,209 @@
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+}
 
-    @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-    p {
-        font-family: 'Poppins', sans-serif;
-        font-size: 1.1em;
-        font-weight: 300;
-        line-height: 1.7em;
-        color: #999;
-    }
-    .input-form-search{
-        border: 0px solid;
-        width: 100%;
-    }
-    .panel-group .panel + .panel {
-        margin-top: 3px;
-    }
-    .panel-group .panel {
-        margin-bottom: 0;
-        border-radius: 0px; 
-    }
-    .panel-default {
-        border-color: #ddd;
-    }
-    .panel {
-        margin-bottom: 20px;
-        background-color: #fff;
-        border: 0px solid transparent; 
-        border-radius: 0px; 
-        -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    }
+#managerpost {
+    table-layout: fixed !important;
+    word-wrap:break-word;
+    border-collapse: collapse;
+    /*width:100%;*/
+}
+.input-form-search{
+    border: 0px solid;
+    width: 100%;
+}
+.panel-group .panel + .panel {
+    margin-top: 3px;
+}
+.panel-group .panel {
+    margin-bottom: 0;
+    border-radius: 0px; 
+}
+.panel-default {
+    border-color: #ddd;
+}
+.panel {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 0px solid transparent; 
+    border-radius: 0px; 
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+}
 
-    a, a:hover, a:focus {
-        color: inherit;
-        text-decoration: none;
-        transition: all 0.3s;
-    }
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
 
-    .navbar1 {
-        padding: 15px 10px;
-        background: #fff;
-        border: none;
-        border-radius: 0;
-        margin-bottom: 40px;
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-    }
+.navbar1 {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
 
-    .navbar1-btn {
-        box-shadow: none;
-        outline: none !important;
-        border: none;
-    }
+.navbar1-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
 
-    .line {
-        width: 100%;
-        height: 1px;
-        border-bottom: 1px dashed #ddd;
-        margin: 40px 0;
-    }
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
 
-    /* ---------------------------------------------------
-        SIDEBAR STYLE
-    ----------------------------------------------------- */
-    .wrapper {
-        display: flex;
-        align-items: stretch;
-    }
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+.wrapper {
+    display: flex;
+    align-items: stretch;
+}
 
-    .search-input {
-        display: block;
-        width: 100%;
-        height: 34px;
-        padding: 6px 12px;
-        font-size: 14px;
-        line-height: 1.42857143;
-        color: #555;
-        background-color: #fff;
-        background-image: none;
-        border: 1px solid #ccc;
-        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-        -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-        -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-        transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    }
+.search-input {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
 
+#sidebar {
+    min-width: 300px;
+    max-width: 300px;
+    background: #f7f9fa;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.2) !important;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -300px;
+}
+
+#sidebar .sidebar-header {
+    /*padding: 5px;*/
+    margin-bottom: 10px;
+    margin-top: 15px;
+    /*background: #6d7fcc;*/
+    height: 60px;
+}
+
+#sidebar ul.components {
+    /*padding: 20px 0;*/
+    /*border-bottom: 1px solid #47748b;*/
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 5px;
+    padding-left: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: #fff;
+}
+
+#sidebar ul li.active > a, a[aria-expanded="true"] {
+    /*color: #fff;*/
+    /*background: #6d7fcc;*/
+}
+
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
+    /*content: '\e259';*/
+    display: block;
+    position: absolute;
+    right: 20px;
+    font-family: 'Glyphicons Halflings';
+    font-size: 0.6em;
+}
+/*a[aria-expanded="true"]::before {
+    content: '\e260';
+}*/
+
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.download {
+    background: #fff;
+    color: #7386D5;
+}
+
+a.article, a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
     #sidebar {
-        min-width: 250px;
-        max-width: 250px;
-        background: #f7f9fa;
-        box-shadow: 4px 4px 10px rgba(0,0,0,0.2) !important;
-        transition: all 0.3s;
-    }
-
-    #sidebar.active {
         margin-left: -250px;
     }
-
-    #sidebar .sidebar-header {
-        /*padding: 5px;*/
-        margin-bottom: 10px;
-        margin-top: 15px;
-        /*background: #6d7fcc;*/
-        height: 60px;
+    #sidebar.active {
+        margin-left: 0;
     }
-
-    #sidebar ul.components {
-        /*padding: 20px 0;*/
-        /*border-bottom: 1px solid #47748b;*/
+    #sidebarCollapse span {
+        display: none;
     }
-
-    #sidebar ul p {
-        color: #fff;
-        padding: 10px;
-    }
-
-    #sidebar ul li a {
-        padding: 5px;
-        padding-left: 10px;
-        font-size: 1.1em;
-        display: block;
-    }
-    #sidebar ul li a:hover {
-        color: #7386D5;
-        background: #fff;
-    }
-
-    #sidebar ul li.active > a, a[aria-expanded="true"] {
-        /*color: #fff;*/
-        /*background: #6d7fcc;*/
-    }
-
-
-    a[data-toggle="collapse"] {
-        position: relative;
-    }
-
-    a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
-        /*content: '\e259';*/
-        display: block;
-        position: absolute;
-        right: 20px;
-        font-family: 'Glyphicons Halflings';
-        font-size: 0.6em;
-    }
-    /*a[aria-expanded="true"]::before {
-        content: '\e260';
-    }*/
-
-
-    ul ul a {
-        font-size: 0.9em !important;
-        padding-left: 30px !important;
-    }
-
-    ul.CTAs {
-        padding: 20px;
-    }
-
-    ul.CTAs a {
-        text-align: center;
-        font-size: 0.9em !important;
-        display: block;
-        border-radius: 5px;
-        margin-bottom: 5px;
-    }
-
-    a.download {
-        background: #fff;
-        color: #7386D5;
-    }
-
-    a.article, a.article:hover {
-        background: #6d7fcc !important;
-        color: #fff !important;
-    }
-
-
-
-    /* ---------------------------------------------------
-        CONTENT STYLE
-    ----------------------------------------------------- */
-    #content {
-        width: 100%;
-        padding: 20px;
-        min-height: 100vh;
-        transition: all 0.3s;
-    }
-
-    /* ---------------------------------------------------
-        MEDIAQUERIES
-    ----------------------------------------------------- */
-    @media (max-width: 768px) {
-        #sidebar {
-            margin-left: -250px;
-        }
-        #sidebar.active {
-            margin-left: 0;
-        }
-        #sidebarCollapse span {
-            display: none;
-        }
-    }
+}
