--- a/app/asset/css/search.css
+++ b/app/asset/css/search.css
@@ -7,12 +7,21 @@ p {
     color: #999;
 }
 
+.table-scroll{
+    max-width: 75%;
+    overflow: auto;
+}
+
 #managerpost {
     table-layout: fixed !important;
     word-wrap:break-word;
     border-collapse: collapse;
     /*width:100%;*/
+    /*overflow-x:scroll;*/
+    /*overflow-y: hidden;*/
+    /*width: 1000px;*/
 }
+
 .input-form-search{
     border: 0px solid;
     width: 100%;
@@ -70,6 +79,9 @@ a, a:hover, a:focus {
 .wrapper {
     display: flex;
     align-items: stretch;
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .search-input {
@@ -91,15 +103,15 @@ a, a:hover, a:focus {
 }
 
 #sidebar {
-    min-width: 300px;
-    max-width: 300px;
+    min-width: 25%;
+    max-width: 25%;
     background: #f7f9fa;
     box-shadow: 4px 4px 10px rgba(0,0,0,0.2) !important;
     transition: all 0.3s;
 }
 
 #sidebar.active {
-    margin-left: -300px;
+    margin-left: -25%;
 }
 
 #sidebar .sidebar-header {
@@ -198,8 +210,13 @@ a.article, a.article:hover {
 ----------------------------------------------------- */
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: -25%;
     }
+    .table-scroll{
+        max-width: 100%;
+        overflow: auto;
+    }
+
     #sidebar.active {
         margin-left: 0;
     }
