--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -383,6 +383,7 @@
     $(document).ready(function () {
         $('#sidebarCollapse').on('click', function () {
             $('#sidebar').toggleClass('active');
+            $('.table-scroll').css('max-width', '100%');
         });
         $("#slider").slider({
             min: 0,
