--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -192,7 +192,7 @@
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
 					<h4 class="panel-title">
-				  		<a data-toggle="collapse" data-parent="#accordion" href=".collapse12" ng-click="openleafmap = !openleafmap">Vị trí tọa độ</a>
+				  		<a data-toggle="collapse" data-parent="#accordion" href=".collapse12" ng-click="openmap()">Vị trí tọa độ</a>
 					</h4>
 			  	</div>
 			  	<div id="collapse12" class="collapse12 panel-collapse collapse">
