--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -197,7 +197,7 @@
 			  	</div>
 			  	<div id="collapse12" class="collapse12 panel-collapse collapse">
 					<div class="panel-body" style="padding: 0px;">
-						<leaflet ng-if="openleafmap" lf-center="map.center" lf-draw="map.drawOptions" layers="map.layers" watch-options='watchOptions' defaults="defaults"  height="200px" width="100%">
+						<leaflet lf-center="map.center" lf-draw="map.drawOptions" layers="map.layers" watch-options='map.watchOptions' defaults="defaults"  height="200px" width="100%">
 						</leaflet>
 					</div>
 			  	</div>
