--- a/app/views/templates/home.template.html
+++ b/app/views/templates/home.template.html
@@ -56,7 +56,7 @@
     }
 
     .image-div:hover .image {
-        opacity: 0.3;
+        opacity: 0.7;
     }
 
     .image-div:hover .middle {
@@ -96,10 +96,10 @@
         </div> -->
         <div class="gal">
             <div ng-repeat="img in images" class="image-div">
-                <img ng-src="{{'https://baotangvn.online' + img.imgUrl}}" alt="" class="image">
-                <div class="middle">
+                <a ng-href="{{img.url + '?display=html'}}"><img ng-src="{{'https://baotangvn.online' + img.imgUrl}}" alt="" class="image"></a>
+                <!-- <div class="middle">
                     <div class="text"><a ng-href="{{img.url + '?display=html'}}">Xem chi tiết</a></div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
